--- a/new app/student_auth/accounts/templates/accounts/contest.html
+++ b/new app/student_auth/accounts/templates/accounts/contest.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
 
-                <a href="{% url 'problem_editor' %}" class="bg-yellow-400 text-purple-900 font-bold px-10 py-4 rounded-lg text-xl hover:bg-yellow-500 transition-transform transform hover:scale-105 inline-block">
+                <a href="{% url 'start' %}" class="bg-yellow-400 text-purple-900 font-bold px-10 py-4 rounded-lg text-xl hover:bg-yellow-500 transition-transform transform hover:scale-105 inline-block">
                     Start Now
                 </a>
             </div>
